--- a/style.css
+++ b/style.css
@@ -1,6 +1,27 @@
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+  display: flex;
+  background: linear-gradient(#e66465, #9198e5);
+}
+
 .grid {
     display: flex;
     flex-wrap: wrap;
+    margin: auto;
     height: 300px;
     width: 400px;
 }
+
+h3 {
+    color: azure;
+    display: flex;
+    margin: auto;
+}
+
